--- a/fluttertube/pubspec.yaml
+++ b/fluttertube/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_youtube: ^1.1.4
+  flutter_youtube: ^2.0.0+1
   http: ^0.12.0
   shared_preferences: ^0.4.3
   rxdart: ^0.20.0
