--- a/mobx_tutorial/pubspec.yaml
+++ b/mobx_tutorial/pubspec.yaml
@@ -35,6 +35,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  mobx_codegen: ^1.0.3
+  build_runner: ^1.8.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
