--- a/todo_mobx/pubspec.yaml
+++ b/todo_mobx/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   mobx: ^1.1.1
   flutter_mobx: ^1.1.0
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
