[XLO] Criando a Tela de Cadastro

--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   get_it: ^7.1.3
+  brasil_fields: ^1.1.2
 
 dev_dependencies:
   flutter_test:
