--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -29,11 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   parse_server_sdk_flutter: ^3.0.0
-  flutter_dotenv: ^3.1.0
+  flutter_dotenv: ^5.0.0
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   get_it: ^7.1.3
   brasil_fields: ^1.1.2
+  image_picker: ^0.7.5+3
 
 dev_dependencies:
   flutter_test:
