--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get_it: ^7.1.3
   brasil_fields: ^1.1.2
   image_picker: ^0.7.5+3
+  image_cropper: ^1.4.0
 
 dev_dependencies:
   flutter_test:
