--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -33,12 +33,13 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   get_it: ^7.1.3
-  brasil_fields: ^1.1.2
-  image_picker: ^0.7.5+3
+  brasil_fields: ^1.1.3
+  image_picker: ^0.8.0+1
   image_cropper: ^1.4.0
   dio: ^4.0.0
   shared_preferences: ^2.0.6
   path: ^1.8.0
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
