--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_mobx: ^2.0.0
   get_it: ^7.1.3
   brasil_fields: ^1.1.3
-  image_picker: ^0.8.0+1
+  image_picker: ^0.8.0+3
   image_cropper: ^1.4.0
   dio: ^4.0.0
   shared_preferences: ^2.0.6
@@ -44,6 +44,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   carousel_pro: ^1.0.0
+  readmore: ^2.1.0
 
 dev_dependencies:
   flutter_test:
