--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -28,31 +28,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-  parse_server_sdk_flutter: ^3.0.0
+  parse_server_sdk_flutter: ^2.0.1
   flutter_dotenv: ^5.0.0
-  mobx: ^2.0.1
-  flutter_mobx: ^2.0.0
-  get_it: ^7.1.3
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
+  get_it: ^5.0.1
   brasil_fields: ^1.1.3
-  image_picker: ^0.8.0+3
-  image_cropper: ^1.4.0
-  dio: ^4.0.0
-  shared_preferences: ^2.0.6
-  path: ^1.8.0
-  cached_network_image: ^3.0.0
-  intl: ^0.17.0
+  image_picker: ^0.6.7+14
+  image_cropper: ^1.3.1
+  dio: ^3.0.10
+  shared_preferences: ^0.5.12+4
+  path: ^1.7.0
+  cached_network_image: ^2.4.1
+  intl: 0.17.0
   flutter_localizations:
     sdk: flutter
   carousel_pro: ^1.0.0
   readmore: ^2.1.0
-  url_launcher: ^6.0.6
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.0.4
-  mobx_codegen: ^2.0.1+3
+  build_runner: ^1.10.7
+  mobx_codegen: ^1.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
