--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   carousel_pro: ^1.0.0
   readmore: ^2.1.0
   url_launcher: ^5.7.10
+  toggle_switch: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
