--- a/xlo_mobx/pubspec.yaml
+++ b/xlo_mobx/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   readmore: ^2.1.0
   url_launcher: ^5.7.10
   toggle_switch: ^1.0.0+1
+  data_connection_checker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
